# Physical_Book

./: .env  .env.example  .env.local  .gitignore  404.html  CLAUDE.md  index.html  package-lock.json  sitemap.xml  vectorize_book.py
.specify/memory/: constitution.md
assets/css/: styles.bd670a68.css
assets/js/: 01a85c17.53327b66.js  0e384e19.046b525d.js  0e384e19.369d2bd8.js  0e483543.7ad692bf.js  117ac97d.9368042d.js  117ac97d.a4e9bed3.js  157872e4.44bdb06f.js  18c41134.4fde0dc7.js  18c41134.d48a3d80.js  1de1d378.0a703751.js  1df93b7f.3dfd6ad6.js  1e4232ab.6038e969.js  1e4232ab.f1f34489.js  1f391b9e.d399686a.js  215dfe40.b2ee0841.js  2237.e179e752.js  255fe1ef.92520487.js  255fe1ef.a4e988c5.js  2f0d94f7.d93eb542.js  2f0d94f7.e4efbb8a.js  3269.ba3613de.js  3269.fc3c3408.js  393be207.39e4b044.js  3d091599.3e872ed5.js  3d091599.91639a3b.js  4b7f4d44.6a34af31.js  533a09ca.c8055b85.js  533a09ca.f32b0720.js  59362658.47943fff.js  59362658.516223e7.js  (+72 more)
backend/: .env  .env.example  README.md  data-model.md  main.py  pyproject.toml  quickstart.md  requirements-dev.txt  test_qdrant.py
backend/content_ingestion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data_processing_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/rag_agent/: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  simple_test.py  test_rag_agent.py
backend/rag_agent/src/: main.py
blog/: atom.xml  index.html  rss.xml
docs/: index.html
markdown-page/: index.html
my-book/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+264 files in other folders)
