[project]
name = "rag-agent"
version = "0.1.0"
description = "RAG Agent with Retrieval Capabilities using OpenAI and Qdrant"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "openai>=1.3.5",
    "qdrant-client>=1.7.0",
    "cohere>=4.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]